Fixed styling alignment for undo and start over buttons.  Restyling "Show Correct Answer" button so it is in-line and styled accordingly with Undo and Start Over buttons.  Adjusted config panel input fields to line-up with labels.

--- a/components/corespring/ordering/src/client/styles.less
+++ b/components/corespring/ordering/src/client/styles.less
@@ -34,6 +34,11 @@
   min-height: 55px;
 }
 
+.button-row {
+  .btn-success{
+    background: @correct-color;
+  }
+}
 .view-placement-ordering {
 
   .show-correct-button {
@@ -561,7 +566,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 5px 0 45px 0;
-    max-width: 400px;
+    // max-width: 400px;
     min-height: 47px;
     padding: 1.13em;
     background: #efefef;
